# ros_projects

get_key/: CMakeLists.txt  package.xml
get_key/launch/: test.launch
get_key/src/: get_key.cpp
mycode/: CMakeLists.txt  package.xml
mycode/launch/: key_controle.launch
mycode/scripts/: controle_keyboard.py  read_test.py
